// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventDataSection renders formatted 1`] = `
<DataSection
  className=""
>
  <SectionHeader
    id="extra"
  >
    <Permalink
      className="permalink"
      href="#extra"
    >
      <em
        className="icon-anchor"
      />
    </Permalink>
    <h3>
      Additional Data
    </h3>
    <div
      className="btn-group"
    >
      <a
        className="active btn btn-default btn-sm"
        onClick={[Function]}
      >
        Formatted
      </a>
      <a
        className=" btn btn-default btn-sm"
        onClick={[Function]}
      >
        Raw
      </a>
    </div>
  </SectionHeader>
  <SectionContents />
</DataSection>
`;

exports[`EventDataSection renders raw 1`] = `
<DataSection
  className=""
>
  <SectionHeader
    id="extra"
  >
    <Permalink
      className="permalink"
      href="#extra"
    >
      <em
        className="icon-anchor"
      />
    </Permalink>
    <h3>
      Additional Data
    </h3>
    <div
      className="btn-group"
    >
      <a
        className=" btn btn-default btn-sm"
        onClick={[Function]}
      >
        Formatted
      </a>
      <a
        className="active btn btn-default btn-sm"
        onClick={[Function]}
      >
        Raw
      </a>
    </div>
  </SectionHeader>
  <SectionContents />
</DataSection>
`;

exports[`KeyValueList renders formatted 1`] = `
<table
  className="table key-value"
>
  <tbody>
    <tr
      key="andthis"
    >
      <TableData
        className="key"
        wide={false}
      >
        andthis
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data={0}
          withAnnotatedText={false}
        />
      </td>
    </tr>
    <tr
      key="plussomeotherstuff"
    >
      <TableData
        className="key"
        wide={false}
      >
        plussomeotherstuff
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data="here"
          withAnnotatedText={false}
        />
      </td>
    </tr>
    <tr
      key="somestuff"
    >
      <TableData
        className="key"
        wide={false}
      >
        somestuff
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data={
            Object {
              "andsomeotherstuff": "here",
            }
          }
          withAnnotatedText={false}
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`KeyValueList renders raw 1`] = `
<table
  className="table key-value"
>
  <tbody>
    <tr
      key="andthis"
    >
      <TableData
        className="key"
        wide={false}
      >
        andthis
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data="0"
          withAnnotatedText={false}
        />
      </td>
    </tr>
    <tr
      key="plussomeotherstuff"
    >
      <TableData
        className="key"
        wide={false}
      >
        plussomeotherstuff
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data="\\"here\\""
          withAnnotatedText={false}
        />
      </td>
    </tr>
    <tr
      key="somestuff"
    >
      <TableData
        className="key"
        wide={false}
      >
        somestuff
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data="{\\"andsomeotherstuff\\":\\"here\\"}"
          withAnnotatedText={false}
        />
      </td>
    </tr>
  </tbody>
</table>
`;
